--- a/BM_fw/BM_fw.ioc
+++ b/BM_fw/BM_fw.ioc
@@ -1,35 +1,55 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=SPI3_RX
+Dma.RequestsNb=1
+Dma.SPI3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI3_RX.0.Instance=DMA1_Stream0
+Dma.SPI3_RX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI3_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_RX.0.Mode=DMA_NORMAL
+Dma.SPI3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI3_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_RX.0.Priority=DMA_PRIORITY_MEDIUM
+Dma.SPI3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI3
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PF0
-Mcu.Pin10=PG15
-Mcu.Pin11=PB7
-Mcu.Pin12=PB8
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin10=PC10
+Mcu.Pin11=PC11
+Mcu.Pin12=PC12
+Mcu.Pin13=PD0
+Mcu.Pin14=PD4
+Mcu.Pin15=PG15
+Mcu.Pin16=PB7
+Mcu.Pin17=PB8
+Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin2=PF8
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC9
-Mcu.Pin6=PA8
-Mcu.Pin7=PC11
-Mcu.Pin8=PD0
-Mcu.Pin9=PD4
-Mcu.PinsNb=14
+Mcu.Pin5=PG2
+Mcu.Pin6=PG3
+Mcu.Pin7=PG4
+Mcu.Pin8=PC9
+Mcu.Pin9=PA8
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=4.26.0
 MxDb.Version=DB.4.0.260
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -39,6 +59,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+PA8.GPIOParameters=GPIO_Speed
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
 PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
@@ -53,12 +75,19 @@ PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB8.Locked=true
 PB8.PinState=GPIO_PIN_RESET
 PB8.Signal=GPIO_Output
+PC10.Mode=RX_Only_Simplex_Unidirect_Slave
+PC10.Signal=SPI3_SCK
 PC11.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PC11.GPIO_Label=SPI3_DIR
 PC11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC11.Locked=true
 PC11.PinState=GPIO_PIN_RESET
 PC11.Signal=GPIO_Output
+PC12.Locked=true
+PC12.Mode=RX_Only_Simplex_Unidirect_Slave
+PC12.Signal=SPI3_MOSI
+PC9.GPIOParameters=GPIO_Speed
+PC9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC9.Mode=Clock-out-2
 PC9.Signal=RCC_MCO_2
 PCC.Checker=false
@@ -105,6 +134,21 @@ PG15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG15.Locked=true
 PG15.PinState=GPIO_PIN_RESET
 PG15.Signal=GPIO_Output
+PG2.GPIOParameters=GPIO_Speed,GPIO_Label
+PG2.GPIO_Label=RED
+PG2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PG2.Locked=true
+PG2.Signal=GPIO_Output
+PG3.GPIOParameters=GPIO_Speed,GPIO_Label
+PG3.GPIO_Label=YELLOW
+PG3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PG3.Locked=true
+PG3.Signal=GPIO_Output
+PG4.GPIOParameters=GPIO_Speed,GPIO_Label
+PG4.GPIO_Label=GREEN
+PG4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PG4.Locked=true
+PG4.Signal=GPIO_Output
 PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.Mode=HSE-External-Oscillator
@@ -135,7 +179,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true
 RCC.AHBFreq_Value=215040000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=53760000
@@ -203,6 +247,13 @@ RCC.VCOI2SOutputFreq_Value=393216000
 RCC.VCOInputFreq_Value=2048000
 RCC.VCOOutputFreq_Value=430080000
 RCC.VCOSAIOutputFreq_Value=393216000
+SPI3.CLKPhase=SPI_PHASE_2EDGE
+SPI3.CLKPolarity=SPI_POLARITY_HIGH
+SPI3.DataSize=SPI_DATASIZE_16BIT
+SPI3.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI3.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPolarity,CLKPhase
+SPI3.Mode=SPI_MODE_SLAVE
+SPI3.VirtualType=VM_SLAVE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
