--- a/BM_fw/BM_fw.ioc
+++ b/BM_fw/BM_fw.ioc
@@ -1,12 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=SPI3_RX
-Dma.RequestsNb=1
+Dma.Request1=SPI2_RX
+Dma.RequestsNb=2
+Dma.SPI2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.1.Instance=DMA1_Stream1
+Dma.SPI2_RX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.1.Mode=DMA_CIRCULAR
+Dma.SPI2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.SPI3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI3_RX.0.Instance=DMA1_Stream0
 Dma.SPI3_RX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.SPI3_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_RX.0.Mode=DMA_NORMAL
+Dma.SPI3_RX.0.Mode=DMA_CIRCULAR
 Dma.SPI3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI3_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_RX.0.Priority=DMA_PRIORITY_MEDIUM
@@ -18,31 +29,34 @@ Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
-Mcu.IP4=SPI3
-Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP4=SPI2
+Mcu.IP5=SPI3
+Mcu.IP6=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
 Mcu.Pin1=PF0
-Mcu.Pin10=PC10
-Mcu.Pin11=PC11
-Mcu.Pin12=PC12
-Mcu.Pin13=PD0
-Mcu.Pin14=PD4
-Mcu.Pin15=PG15
-Mcu.Pin16=PB7
-Mcu.Pin17=PB8
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=PC9
+Mcu.Pin11=PA8
+Mcu.Pin12=PC10
+Mcu.Pin13=PC11
+Mcu.Pin14=PC12
+Mcu.Pin15=PD0
+Mcu.Pin16=PD4
+Mcu.Pin17=PG15
+Mcu.Pin18=PB7
+Mcu.Pin19=PB8
 Mcu.Pin2=PF8
+Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PG2
-Mcu.Pin6=PG3
-Mcu.Pin7=PG4
-Mcu.Pin8=PC9
-Mcu.Pin9=PA8
-Mcu.PinsNb=19
+Mcu.Pin5=PB13
+Mcu.Pin6=PB15
+Mcu.Pin7=PG2
+Mcu.Pin8=PG3
+Mcu.Pin9=PG4
+Mcu.PinsNb=21
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -50,6 +64,7 @@ MxCube.Version=4.26.0
 MxDb.Version=DB.4.0.260
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -63,6 +78,12 @@ PA8.GPIOParameters=GPIO_Speed
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
+PB13.Locked=true
+PB13.Mode=RX_Only_Simplex_Unidirect_Slave
+PB13.Signal=SPI2_SCK
+PB15.Locked=true
+PB15.Mode=RX_Only_Simplex_Unidirect_Slave
+PB15.Signal=SPI2_MOSI
 PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PB7.GPIO_Label=UART5_DIR
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -179,7 +200,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.AHBFreq_Value=215040000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=53760000
@@ -247,6 +268,13 @@ RCC.VCOI2SOutputFreq_Value=393216000
 RCC.VCOInputFreq_Value=2048000
 RCC.VCOOutputFreq_Value=430080000
 RCC.VCOSAIOutputFreq_Value=393216000
+SPI2.CLKPhase=SPI_PHASE_2EDGE
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
+SPI2.DataSize=SPI_DATASIZE_16BIT
+SPI2.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI2.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPolarity,CLKPhase
+SPI2.Mode=SPI_MODE_SLAVE
+SPI2.VirtualType=VM_SLAVE
 SPI3.CLKPhase=SPI_PHASE_2EDGE
 SPI3.CLKPolarity=SPI_POLARITY_HIGH
 SPI3.DataSize=SPI_DATASIZE_16BIT
