--- a/BM_fw/BM_fw.ioc
+++ b/BM_fw/BM_fw.ioc
@@ -1,7 +1,8 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=SPI3_RX
 Dma.Request1=SPI2_RX
-Dma.RequestsNb=2
+Dma.Request2=SPI6_RX
+Dma.RequestsNb=3
 Dma.SPI2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI2_RX.1.Instance=DMA1_Stream1
@@ -22,6 +23,16 @@ Dma.SPI3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI3_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI3_RX.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI6_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_RX.2.Instance=DMA2_Stream6
+Dma.SPI6_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_RX.2.Mode=DMA_CIRCULAR
+Dma.SPI6_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI6_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_RX.2.Priority=DMA_PRIORITY_HIGH
+Dma.SPI6_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F7
@@ -31,8 +42,9 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI2
 Mcu.IP5=SPI3
-Mcu.IP6=SYS
-Mcu.IPNb=7
+Mcu.IP6=SPI6
+Mcu.IP7=SYS
+Mcu.IPNb=8
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE3
@@ -44,11 +56,13 @@ Mcu.Pin13=PC11
 Mcu.Pin14=PC12
 Mcu.Pin15=PD0
 Mcu.Pin16=PD4
-Mcu.Pin17=PG15
-Mcu.Pin18=PB7
-Mcu.Pin19=PB8
+Mcu.Pin17=PG13
+Mcu.Pin18=PG14
+Mcu.Pin19=PG15
 Mcu.Pin2=PF8
-Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin20=PB7
+Mcu.Pin21=PB8
+Mcu.Pin22=VP_SYS_VS_Systick
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PB13
@@ -56,7 +70,7 @@ Mcu.Pin6=PB15
 Mcu.Pin7=PG2
 Mcu.Pin8=PG3
 Mcu.Pin9=PG4
-Mcu.PinsNb=21
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -65,6 +79,7 @@ MxDb.Version=DB.4.0.260
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -149,6 +164,12 @@ PF8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF8.Locked=true
 PF8.PinState=GPIO_PIN_RESET
 PF8.Signal=GPIO_Output
+PG13.Locked=true
+PG13.Mode=RX_Only_Simplex_Unidirect_Slave
+PG13.Signal=SPI6_SCK
+PG14.Locked=true
+PG14.Mode=RX_Only_Simplex_Unidirect_Slave
+PG14.Signal=SPI6_MOSI
 PG15.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PG15.GPIO_Label=SPI6_DIR
 PG15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -200,7 +221,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_SPI6_Init-SPI6-false-HAL-true
 RCC.AHBFreq_Value=215040000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=53760000
@@ -282,6 +303,13 @@ SPI3.Direction=SPI_DIRECTION_2LINES_RXONLY
 SPI3.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPolarity,CLKPhase
 SPI3.Mode=SPI_MODE_SLAVE
 SPI3.VirtualType=VM_SLAVE
+SPI6.CLKPhase=SPI_PHASE_2EDGE
+SPI6.CLKPolarity=SPI_POLARITY_HIGH
+SPI6.DataSize=SPI_DATASIZE_16BIT
+SPI6.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI6.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPolarity,CLKPhase
+SPI6.Mode=SPI_MODE_SLAVE
+SPI6.VirtualType=VM_SLAVE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
