--- a/BM_fw/BM_fw.ioc
+++ b/BM_fw/BM_fw.ioc
@@ -47,8 +47,9 @@ Dma.SPI6_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SPI6_RX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.SPI6_RX.2.Priority=DMA_PRIORITY_HIGH
 Dma.SPI6_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FATFS.IPParameters=_FS_LOCK,USE_DMA_CODE_SD,_MAX_SS,_MIN_SS
+FATFS.IPParameters=_FS_LOCK,USE_DMA_CODE_SD,_MAX_SS,_MIN_SS,_FS_EXFAT
 FATFS.USE_DMA_CODE_SD=0
+FATFS._FS_EXFAT=0
 FATFS._FS_LOCK=5
 FATFS._MAX_SS=4096
 FATFS._MIN_SS=512
@@ -278,7 +279,7 @@ RCC.APB2Freq_Value=107520000
 RCC.APB2TimFreq_Value=215040000
 RCC.CECFreq_Value=32786.88524590164
 RCC.CortexFreq_Value=215040000
-RCC.DFSDMAudioFreq_Value=144384000
+RCC.DFSDMAudioFreq_Value=109568000
 RCC.DFSDMFreq_Value=107520000
 RCC.EthernetFreq_Value=215040000
 RCC.FCLKCortexFreq_Value=215040000
@@ -290,9 +291,9 @@ RCC.I2C1Freq_Value=53760000
 RCC.I2C2Freq_Value=53760000
 RCC.I2C3Freq_Value=53760000
 RCC.I2C4Freq_Value=53760000
-RCC.I2SFreq_Value=196608000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RCC_MCO1Source,RCC_MCO2Source,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2ClockSelection,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
-RCC.LCDTFTFreq_Value=72192000
+RCC.I2SFreq_Value=37449142.85714286
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SR,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,RCC_MCO1Source,RCC_MCO2Source,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2ClockSelection,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.LCDTFTFreq_Value=54784000
 RCC.LPTIM1Freq_Value=53760000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -300,32 +301,34 @@ RCC.MCO1PinFreq_Value=12288000
 RCC.MCO2PinFreq_Value=12288000
 RCC.PLL48CLockSelection=RCC_CLK48SOURCE_PLLSAIP
 RCC.PLLCLKFreq_Value=215040000
-RCC.PLLI2SPCLKFreq_Value=196608000
-RCC.PLLI2SQCLKFreq_Value=196608000
-RCC.PLLI2SRCLKFreq_Value=196608000
-RCC.PLLI2SRoutputFreq_Value=196608000
+RCC.PLLI2SN=128
+RCC.PLLI2SPCLKFreq_Value=131072000
+RCC.PLLI2SQCLKFreq_Value=131072000
+RCC.PLLI2SR=7
+RCC.PLLI2SRCLKFreq_Value=37449142.85714286
+RCC.PLLI2SRoutputFreq_Value=37449142.85714286
 RCC.PLLM=6
 RCC.PLLN=210
 RCC.PLLQ=9
 RCC.PLLQCLKFreq_Value=47786666.666666664
 RCC.PLLQoutputFreq_Value=47786666.666666664
 RCC.PLLRFreq_Value=215040000
-RCC.PLLSAIN=141
+RCC.PLLSAIN=107
 RCC.PLLSAIP=RCC_PLLSAIP_DIV6
-RCC.PLLSAIPCLKFreq_Value=48128000
-RCC.PLLSAIQCLKFreq_Value=144384000
-RCC.PLLSAIRCLKFreq_Value=144384000
-RCC.PLLSAIoutputFreq_Value=48128000
+RCC.PLLSAIPCLKFreq_Value=36522666.666666664
+RCC.PLLSAIQCLKFreq_Value=109568000
+RCC.PLLSAIRCLKFreq_Value=109568000
+RCC.PLLSAIoutputFreq_Value=36522666.666666664
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_HSE
 RCC.RCC_MCO2Source=RCC_MCO2SOURCE_HSE
-RCC.RNGFreq_Value=48128000
-RCC.SAI1Freq_Value=144384000
-RCC.SAI2Freq_Value=144384000
+RCC.RNGFreq_Value=36522666.666666664
+RCC.SAI1Freq_Value=109568000
+RCC.SAI2Freq_Value=109568000
 RCC.SDMMC2ClockSelection=RCC_SDMMC2CLKSOURCE_CLK48
-RCC.SDMMC2Freq_Value=48128000
+RCC.SDMMC2Freq_Value=36522666.666666664
 RCC.SDMMCFreq_Value=215040000
-RCC.SPDIFRXFreq_Value=196608000
+RCC.SPDIFRXFreq_Value=131072000
 RCC.SYSCLKFreq_VALUE=215040000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.UART4Freq_Value=53760000
@@ -336,11 +339,11 @@ RCC.USART1Freq_Value=107520000
 RCC.USART2Freq_Value=53760000
 RCC.USART3Freq_Value=53760000
 RCC.USART6Freq_Value=107520000
-RCC.USBFreq_Value=48128000
-RCC.VCOI2SOutputFreq_Value=393216000
+RCC.USBFreq_Value=36522666.666666664
+RCC.VCOI2SOutputFreq_Value=262144000
 RCC.VCOInputFreq_Value=2048000
 RCC.VCOOutputFreq_Value=430080000
-RCC.VCOSAIOutputFreq_Value=288768000
+RCC.VCOSAIOutputFreq_Value=219136000
 SDMMC2.ClockDiv=0
 SDMMC2.IPParameters=ClockDiv
 SPI2.CLKPhase=SPI_PHASE_2EDGE
