--- a/BM_fw/BM_fw.ioc
+++ b/BM_fw/BM_fw.ioc
@@ -1,52 +1,74 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SPI3_RX
-Dma.Request1=SPI2_RX
-Dma.Request2=SPI6_RX
-Dma.Request3=SDMMC2_TX
-Dma.RequestsNb=4
-Dma.SDMMC2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SDMMC2_TX.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.SDMMC2_TX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.SDMMC2_TX.3.Instance=DMA2_Stream0
-Dma.SDMMC2_TX.3.MemBurst=DMA_MBURST_INC4
-Dma.SDMMC2_TX.3.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.SDMMC2_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.SDMMC2_TX.3.Mode=DMA_PFCTRL
-Dma.SDMMC2_TX.3.PeriphBurst=DMA_PBURST_INC4
-Dma.SDMMC2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.SDMMC2_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SDMMC2_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.SDMMC2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.SPI2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI2_RX.1.Instance=DMA1_Stream1
-Dma.SPI2_RX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI2_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_RX.1.Mode=DMA_CIRCULAR
-Dma.SPI2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI2_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.SPI2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI3_RX.0.Instance=DMA1_Stream0
-Dma.SPI3_RX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI3_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_RX.0.Mode=DMA_CIRCULAR
-Dma.SPI3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI3_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_RX.0.Priority=DMA_PRIORITY_MEDIUM
-Dma.SPI3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI6_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI6_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI6_RX.2.Instance=DMA2_Stream6
-Dma.SPI6_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI6_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI6_RX.2.Mode=DMA_CIRCULAR
-Dma.SPI6_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI6_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI6_RX.2.Priority=DMA_PRIORITY_HIGH
-Dma.SPI6_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=SDMMC2_TX
+Dma.Request1=SPI5_RX
+Dma.Request2=SPI4_RX
+Dma.Request3=SPI3_RX
+Dma.Request4=SPI2_RX
+Dma.Request5=SPI6_RX
+Dma.RequestsNb=6
+Dma.SDMMC2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDMMC2_TX.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDMMC2_TX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDMMC2_TX.0.Instance=DMA2_Stream5
+Dma.SDMMC2_TX.0.MemBurst=DMA_MBURST_INC4
+Dma.SDMMC2_TX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDMMC2_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SDMMC2_TX.0.Mode=DMA_PFCTRL
+Dma.SDMMC2_TX.0.PeriphBurst=DMA_PBURST_INC4
+Dma.SDMMC2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDMMC2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SDMMC2_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SDMMC2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SPI2_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI2_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI2_RX.4.Instance=DMA1_Stream1
+Dma.SPI2_RX.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.SPI2_RX.4.Mode=DMA_CIRCULAR
+Dma.SPI2_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_RX.4.Priority=DMA_PRIORITY_HIGH
+Dma.SPI2_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI3_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI3_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI3_RX.3.Instance=DMA1_Stream0
+Dma.SPI3_RX.3.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI3_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.SPI3_RX.3.Mode=DMA_CIRCULAR
+Dma.SPI3_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI3_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI3_RX.3.Priority=DMA_PRIORITY_HIGH
+Dma.SPI3_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI4_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI4_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI4_RX.2.Instance=DMA2_Stream0
+Dma.SPI4_RX.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI4_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.SPI4_RX.2.Mode=DMA_CIRCULAR
+Dma.SPI4_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI4_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI4_RX.2.Priority=DMA_PRIORITY_HIGH
+Dma.SPI4_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI5_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI5_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI5_RX.1.Instance=DMA2_Stream3
+Dma.SPI5_RX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI5_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI5_RX.1.Mode=DMA_CIRCULAR
+Dma.SPI5_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI5_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI5_RX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI5_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI6_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI6_RX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI6_RX.5.Instance=DMA2_Stream6
+Dma.SPI6_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI6_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.SPI6_RX.5.Mode=DMA_CIRCULAR
+Dma.SPI6_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI6_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI6_RX.5.Priority=DMA_PRIORITY_HIGH
+Dma.SPI6_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FATFS.IPParameters=_FS_LOCK,USE_DMA_CODE_SD,_MAX_SS,_MIN_SS,_FS_EXFAT
 FATFS.USE_DMA_CODE_SD=0
 FATFS._FS_EXFAT=0
@@ -58,49 +80,55 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DMA
+Mcu.IP10=SPI6
+Mcu.IP11=SYS
 Mcu.IP2=FATFS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SDMMC2
 Mcu.IP6=SPI2
 Mcu.IP7=SPI3
-Mcu.IP8=SPI6
-Mcu.IP9=SYS
-Mcu.IPNb=10
+Mcu.IP8=SPI4
+Mcu.IP9=SPI5
+Mcu.IPNb=12
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE3
-Mcu.Pin1=PF0
-Mcu.Pin10=PG4
-Mcu.Pin11=PC9
-Mcu.Pin12=PA8
-Mcu.Pin13=PC10
-Mcu.Pin14=PC11
-Mcu.Pin15=PC12
-Mcu.Pin16=PD0
-Mcu.Pin17=PD4
-Mcu.Pin18=PD6
-Mcu.Pin19=PD7
-Mcu.Pin2=PF8
-Mcu.Pin20=PG9
-Mcu.Pin21=PG10
-Mcu.Pin22=PG11
-Mcu.Pin23=PG12
-Mcu.Pin24=PG13
-Mcu.Pin25=PG14
-Mcu.Pin26=PG15
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=VP_FATFS_VS_SDIO
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC5
-Mcu.Pin6=PB13
-Mcu.Pin7=PB15
-Mcu.Pin8=PG2
-Mcu.Pin9=PG3
-Mcu.PinsNb=31
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PB13
+Mcu.Pin11=PB15
+Mcu.Pin12=PG2
+Mcu.Pin13=PG3
+Mcu.Pin14=PG4
+Mcu.Pin15=PC9
+Mcu.Pin16=PA8
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
+Mcu.Pin19=PC12
+Mcu.Pin2=PE6
+Mcu.Pin20=PD0
+Mcu.Pin21=PD4
+Mcu.Pin22=PD6
+Mcu.Pin23=PD7
+Mcu.Pin24=PG9
+Mcu.Pin25=PG10
+Mcu.Pin26=PG11
+Mcu.Pin27=PG12
+Mcu.Pin28=PG13
+Mcu.Pin29=PG14
+Mcu.Pin3=PF0
+Mcu.Pin30=PG15
+Mcu.Pin31=PB7
+Mcu.Pin32=PB8
+Mcu.Pin33=VP_FATFS_VS_SDIO
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin4=PF7
+Mcu.Pin5=PF8
+Mcu.Pin6=PF9
+Mcu.Pin7=PH0/OSC_IN
+Mcu.Pin8=PH1/OSC_OUT
+Mcu.Pin9=PC5
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -110,6 +138,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA2_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -185,24 +215,32 @@ PD6.Mode=SD_4_bits_Wide_bus
 PD6.Signal=SDMMC2_CK
 PD7.Mode=SD_4_bits_Wide_bus
 PD7.Signal=SDMMC2_CMD
+PE2.Mode=RX_Only_Simplex_Unidirect_Slave
+PE2.Signal=SPI4_SCK
 PE3.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PE3.GPIO_Label=SPI4_DIR
 PE3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE3.Locked=true
 PE3.PinState=GPIO_PIN_RESET
 PE3.Signal=GPIO_Output
+PE6.Mode=RX_Only_Simplex_Unidirect_Slave
+PE6.Signal=SPI4_MOSI
 PF0.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PF0.GPIO_Label=CLK_OUT_EN
 PF0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF0.Locked=true
 PF0.PinState=GPIO_PIN_RESET
 PF0.Signal=GPIO_Output
+PF7.Mode=RX_Only_Simplex_Unidirect_Slave
+PF7.Signal=SPI5_SCK
 PF8.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PF8.GPIO_Label=SPI5_DIR
 PF8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF8.Locked=true
 PF8.PinState=GPIO_PIN_RESET
 PF8.Signal=GPIO_Output
+PF9.Mode=RX_Only_Simplex_Unidirect_Slave
+PF9.Signal=SPI5_MOSI
 PG10.Mode=SD_4_bits_Wide_bus
 PG10.Signal=SDMMC2_D1
 PG11.Mode=SD_4_bits_Wide_bus
@@ -269,7 +307,7 @@ ProjectManager.StackSize=0xF000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_SPI6_Init-SPI6-false-HAL-true,8-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_SPI6_Init-SPI6-false-HAL-true,8-MX_SDMMC2_SD_Init-SDMMC2-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-true,10-MX_SPI5_Init-SPI5-false-HAL-true,11-MX_SPI4_Init-SPI4-false-HAL-true
 RCC.AHBFreq_Value=215040000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=53760000
@@ -360,6 +398,20 @@ SPI3.Direction=SPI_DIRECTION_2LINES_RXONLY
 SPI3.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPolarity,CLKPhase
 SPI3.Mode=SPI_MODE_SLAVE
 SPI3.VirtualType=VM_SLAVE
+SPI4.CLKPhase=SPI_PHASE_2EDGE
+SPI4.CLKPolarity=SPI_POLARITY_HIGH
+SPI4.DataSize=SPI_DATASIZE_16BIT
+SPI4.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI4.IPParameters=VirtualType,Mode,Direction,DataSize,CLKPolarity,CLKPhase
+SPI4.Mode=SPI_MODE_SLAVE
+SPI4.VirtualType=VM_SLAVE
+SPI5.CLKPhase=SPI_PHASE_2EDGE
+SPI5.CLKPolarity=SPI_POLARITY_HIGH
+SPI5.DataSize=SPI_DATASIZE_16BIT
+SPI5.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI5.IPParameters=VirtualType,Mode,Direction,CLKPolarity,CLKPhase,DataSize
+SPI5.Mode=SPI_MODE_SLAVE
+SPI5.VirtualType=VM_SLAVE
 SPI6.CLKPhase=SPI_PHASE_2EDGE
 SPI6.CLKPolarity=SPI_POLARITY_HIGH
 SPI6.DataSize=SPI_DATASIZE_16BIT
