--- a/BM_fw/BM_fw.ioc
+++ b/BM_fw/BM_fw.ioc
@@ -441,7 +441,8 @@ USB_DEVICE.USBD_AUDIO_FREQ-AUDIO_FS=24000
 USB_DEVICE.USBD_LPM_ENABLED-AUDIO_FS=0
 USB_DEVICE.VirtualMode-AUDIO_FS=Audio
 USB_DEVICE.VirtualModeFS=Audio_FS
-USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.IPParameters=VirtualMode,Sof_enable
+USB_OTG_FS.Sof_enable=ENABLE
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
